--- a/project-03/css/main.css
+++ b/project-03/css/main.css
@@ -1,28 +1,56 @@
+.center{
+    text-align: center;
+}
+
 h1 {
     font-family: 'Roboto', sans-serif;
     text-transform: uppercase;
-    font-size: 3.68em;
+    font-size: 24pt;
+    letter-spacing: 10pt;
     line-height: 150%;
+    font-weight:800;
+    color:rgb(119, 122, 124);
+    text-align: center;
   }
 h2{
     font-family: 'Roboto', sans-serif;
     text-transform: uppercase;
+    font-size: 10pt;
+    line-height: 150%;
+    font-weight:800;
+    color:rgb(119, 122, 124);
+
 }
 h3{
     font-family: 'Roboto', sans-serif;
     text-transform: uppercase;
+    font-weight:800;
+    color:rgb(119, 122, 124);
 }
 h5{
     font-family: 'Roboto', sans-serif;
     text-transform: uppercase;
+    color:rgb(119, 122, 124);
+    font-weight:800;
 }
 h6{
     font-family: 'Roboto', sans-serif;
+    
+    font-size: 10pt;
+    line-height:0%;
+    padding: 0%;
+    font-weight:800;
+    color:rgb(129, 145, 156);
 }
 p{
-    font-family: 'Roboto', sans-serif;
-    color:darkslategray;
-    font-weight: bold;
+    font-family: 'Calibri', sans-serif;
+    color:rgb(112, 133, 133);
+
+    font-size: 15px;
+
+
+    font-weight: 600;
     
-    line-height: 150%;
+    
+    line-height: 130%;
 }
