--- a/project-03/css/main.css
+++ b/project-03/css/main.css
@@ -8,6 +8,12 @@
     right:0;
     bottom:0;
 }
+.toppart{
+    background-image: url('../images/blog_header_bg.jpg');
+    width:600px;
+    height:120px;
+    align-items: center;
+}
 .lastpart{
     width:600px;
     height:80px;
@@ -21,6 +27,10 @@
     width:100%;
     align-content: center;
     align-items: center;
+    border-style:solid;
+    border-color: rgb(255, 255, 255);
+    border-width: 0.1;
+    
 }
 .column{
     display:flex;
@@ -65,13 +75,15 @@ img{
 h1 {
     font-family: 'Roboto', sans-serif;
     text-transform: uppercase;
-    font-size: 24pt;
+    font-size: 18pt;
     letter-spacing: 10pt;
     line-height: 150%;
     font-weight:800;
-    color:rgb(119, 122, 124);
+    color:rgb(255, 255, 255);
     text-align: center;
     width:600px;
+    position:absolute;
+    top:120px;
   }
 h2{
     font-family: 'Roboto', sans-serif;
