--- a/project-03/css/main.css
+++ b/project-03/css/main.css
@@ -8,6 +8,18 @@
     right:0;
     bottom:0;
 }
+.nav{
+    width:600px;
+    height:30px;
+    align-items: center;
+    background-color: white;
+    opacity:0.5;
+    
+}
+.fix{
+    position:fixed;
+    top:3px;
+}
 .toppart{
     background-image: url('../images/blog_header_bg.jpg');
     width:600px;
@@ -19,6 +31,10 @@
     height:80px;
     background-color: rgb(211, 235, 243);
     margin:auto;
+}
+.midalign{
+    position:absolute;
+    top:0px;
 }
 .row{
     display:flex;
@@ -49,11 +65,21 @@
 .center{
     text-align: center;
 }
+.inlineblock{
+    display:inline-block;
+    text-decoration:none;
+    width: 100px;
+    height: 100px;
+    padding: 5px;
+}
 .size{
     width:300px;
+    object-fit: fill;
 }
 .imgheight{
+    width:300px;
     height:200px;
+    object-fit: fill;
 }
 .upper{
     text-transform: uppercase;
@@ -69,11 +95,17 @@
     text-align: justify;
     
 }
+.offset{
+    position:relative;
+    margin-top: 25px;
+    top:25px;
+}
 img{
     width:600px;
+    
 }
 h1 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Rubik', sans-serif;
     text-transform: uppercase;
     font-size: 18pt;
     letter-spacing: 10pt;
@@ -86,7 +118,7 @@ h1 {
     top:120px;
   }
 h2{
-    font-family: 'Roboto', sans-serif;
+    font-family:'Rubik', sans-serif;
     text-transform: uppercase;
     width:600px;
     font-size: 10pt;
@@ -96,21 +128,21 @@ h2{
 
 }
 h3{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Rubik', sans-serif;
     text-transform: uppercase;
     font-weight:800;
     color:rgb(119, 122, 124);
     width:600px;
 }
 h5{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Rubik', sans-serif;
     text-transform: uppercase;
     color:rgb(119, 122, 124);
     font-weight:800;
     width:600px;
 }
 h6{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Rubik', sans-serif;
     marker:initial;
     font-size: 10pt;
     line-height:120%;
@@ -120,7 +152,7 @@ h6{
     width:600px;
 }
 p{
-    font-family: 'Calibri', sans-serif;
+    font-family: 'Rubik', sans-serif;
     color:rgb(112, 133, 133);
     font-size: 15px;
     /* font-weight: 600; */
@@ -128,3 +160,6 @@ p{
     width:600px;
    
 }
+a:hover {
+    color: #FF00FF;
+  }
